DDF-3357 Adds about page to Intrigue
 - Adds an about page to Intrigue that lists version, commit hash (with or without changes), and release date (taken from last commit).
 - Updates navigator to handle long workspace / metacard names and to be more clear on what those routes are.

--- a/catalog/ui/catalog-ui-search/src/main/webapp/index.html
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/index.html
@@ -64,6 +64,9 @@
         <div id="sources">
 
         </div>
+        <div id="about">
+            
+        </div>
         <div id="workspaces">
 
         </div>
