DDF-1983 Fixed favicon, allow logo with 1:1 or 1:2 aspect ratio

--- a/catalog/ui/catalog-ui-search/src/main/webapp/index.html
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/index.html
@@ -24,6 +24,8 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
+    <link id="favicon" rel="icon" type="image/png" href="data:image/png;base64,">
+
 </head>
 <body>
 <header></header>
