--- a/ui/packages/catalog-ui-search/src/main/webapp/index.html
+++ b/ui/packages/catalog-ui-search/src/main/webapp/index.html
@@ -72,6 +72,9 @@
         <div id="workspaces">
 
         </div>
+        <div id="pattern-guide">
+
+        </div>
         <div id="notfound">
 
         </div>
