--- a/ui/packages/admin-metrics-ui/src/main/webapp/index.html
+++ b/ui/packages/admin-metrics-ui/src/main/webapp/index.html
@@ -1,3 +1,4 @@
+<!--
 /**
  * Copyright (c) Codice Foundation
  *
@@ -12,33 +13,14 @@
  * <http://www.gnu.org/licenses/lgpl.html>.
  *
  **/
-
-// #Main Application
-define(['underscore', 'backbone', 'marionette', 'icanhaz'], function(
-  _,
-  Backbone,
-  Marionette,
-  ich
-) {
-  'use strict'
-
-  var Application = {}
-
-  // This was moved from the main.js file into here.
-  // Since this modules has ui components, and it gets loaded before main.js, we need to init the renderer here for now until we sort this out.
-  Marionette.Renderer.render = function(template, data) {
-    if (!template) {
-      return ''
-    }
-    return ich[template](data)
-  }
-
-  Application.App = new Marionette.Application()
-
-  //add regions
-  Application.App.addRegions({
-    mainRegion: 'main',
-  })
-
-  return Application
-})
+ -->
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+  <head>
+    <title>Admin Console - Metrics Two</title>
+    <meta http-equiv="x-ua-compatible" content="IE=Edge" />
+  </head>
+  <body>
+    <div id="root"></div>
+  </body>
+</html>
