--- a/ui/packages/admin-metrics-ui/src/main/webapp/index.html
+++ b/ui/packages/admin-metrics-ui/src/main/webapp/index.html
@@ -17,7 +17,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
-    <title>Admin Console - Metrics Two</title>
+    <title>Admin Console - Metrics</title>
     <meta http-equiv="x-ua-compatible" content="IE=Edge" />
   </head>
   <body>
